src/objects/TR1__Associate_PO_Closing_Report__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Order_Closing_Reports</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Purchase_Order_Detail__c</fullName>
        <label>Purchase Order Detail</label>
        <referenceTo>TR1__Purchase_Order__c</referenceTo>
        <relationshipLabel>Closing Reports</relationshipLabel>
        <relationshipName>Purchase_Order_Closing_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Associate PO &amp; Closing Report</label>
    <nameField>
        <displayFormat>POCR-{00000}</displayFormat>
        <label>Purchase Order Closing Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associate PO &amp; Closing Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>